force-app/main/default/objects/Opportunity/fields/Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Status__c</fullName>
    <description>Current status of the insurance coverage (Active, Expired, Pending).</description>
    <inlineHelpText>Select the current insurance coverage status.</inlineHelpText>
    <label>Coverage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>