force-app/main/default/objects/Opportunity/fields/External_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contract_Id__c</fullName>
    <description>Stores the unique identifier of the contract from external billing platform.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the unique identifier of the contract from the external billing platform.</inlineHelpText>
    <label>External Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>