force-app/main/default/objects/Opportunity/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <description>Name of the insurance provider associated with the opportunity (e.g., Blue Cross).</description>
    <inlineHelpText>Enter the name of the insurance provider.</inlineHelpText>
    <label>Insurance Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>